Fixed css bug, only visible on safari on iPhone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,6 +249,7 @@ h6,
 #hero:before {
   content: "";
   background: rgba(5, 13, 24, 0.3);
+  height: 100vh;
   position: absolute;
   bottom: 0;
   top: 0;
